front-end, template fixes

--- a/templates/error_page.html
+++ b/templates/error_page.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block body %}
 <p>
-    Whoops! Something went wrong :(. Let us know what happened:
+    Oops! Something went wrong. Let me know what happened:
     <a href="mailto:hirobin.ch@gmail.com">send email</a>.
 </p>
 
