--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,20 +1,16 @@
 {% extends 'layout.html' %}
 {% block body %}
+<p>Upload an image and let the convolutional neural net classify your image!</p>
 
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-<ul class="flash">
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
-{% endwith %}
+<p>
+  This is a pretty simple app, so images which are not square in dimensions
+  will be scaled down and center cropped
+</p>
 
-<p>Upload an image and the algorithm will tell you what it is!</p>
+<p>Possible labels: camera, glasses, headphone, laptop, mouse, shoes, smartphone, watch</p>
 
 <form action="/" method="post" enctype="multipart/form-data">
-    <input type="file" name="image" id="image">
-    <input type="submit" value="Submit">
+  <input type="file" name="image" id="image">
+  <input class="pure-button pure-button-primary" type="submit" value="Submit">
 </form>
 {% endblock %}
