--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Robin's Vision | Upload and Predict Images</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.10.min.css" rel="stylesheet">
+  <link href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.10.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oxygen+Mono" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
+  <link rel="stylesheet" href="{{url_for('static',filename='styles/app.css')}}">
+  <title>Image Classifier</title>
 </head>
 <body>
-    <h1><a href='/'>Robin's Vision</a></h1>
-    {% block body %}{% endblock %}
+  <div id="container" class="pure-g">
+    <div class="pure-u-1 pure-u-lg-1-3">
+      <h1><a href="/">Image Classifier</a></h1>
+    </div>
+
+    <div class="pure-u-1 pure-u-lg-2-3">
+      <div id="flash">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul class="flash">
+          {% for message in messages %}
+          <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+      </div>
+      {% block body %}{% endblock %}
+    </div>
+  </div>
 </body>
 </html>
