--- a/templates/results_page.html
+++ b/templates/results_page.html
@@ -1,5 +1,11 @@
 {% extends 'layout.html' %}
 {% block body %}
-<p>Our algorithm thinks it is a Smartphone!</p>
-
+<div class="centered">
+    <p>Looks like it's a...</p>
+    <img src="{{image_url}}" alt="Input image">
+    {{ plot_div|safe }}
+</div>
+<script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.10.min.js"></script>
+<script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.10.min.js"></script>
+{{ plot_script|safe }}
 {% endblock %}
